# email_dedup

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  LEARNING.md  Makefile  README.md  alembic.ini  assignment.md  build_interactive_plan.md  compose.yaml  pyproject.toml
.cursor/plans/: email-ingestion-prototype_5c20a580.plan.md
.cursor/rules/: collaborative-build.mdc  git-commits.mdc
alembic/: env.py
alembic/versions/: 001_initial_schema.py
k8s/: 00-namespace.yaml  01-config.yaml  02-postgres.yaml  03-migrate.yaml  04-api.yaml  05-worker.yaml  06-loader-test.yaml  07-loader-eval.yaml  08-evaluate.yaml
scripts/: evaluate.py  load_directory.py
src/email_dedup/: __init__.py  canonicalization.py  eval_labels.py  hierarchy.py  loader.py  models.py  parser.py  settings.py  worker.py
src/email_dedup/api/: __init__.py  app.py  deps.py  schemas.py
src/email_dedup/db/: __init__.py  base.py  models.py  repository.py  session.py
tests/integration/: conftest.py  test_api.py  test_persistence.py  test_worker.py
tests/unit/: test_canonicalization.py  test_hierarchy.py  test_package.py  test_parser.py
